<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>testing_tools</name>
  <version>1.0.0</version>
  <description>Tools for testing purposes</description>
  <maintainer email="mariunil@stud.ntnu.no">Marius Nilsen</maintainer>

  <license>Apache License 2.0</license>
  <author email="mariunil@stud.ntnu.no">Marius Nilsen</author>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>angles</depend>
  <depend>sensor_msgs</depend>

  <depend>rws_clients</depend>
  
  <depend>sg_control_interfaces</depend>
  <depend>abb_robot_manager_interfaces</depend>
  <depend>ros2_control_interfaces</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
