<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yumi_launch</name>
  <version>1.0.0</version>
  <description>The yumi_launch package</description>
  
  <maintainer email="mariunil@stud.ntnu.com">Marius Nilsen</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>abb_egm_hardware</depend>
  <depend>controller_manager</depend>
  <depend>parameter_server_interfaces</depend>
  <depend>abb_robot_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
