<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>abb_libegm</name>
  <version>1.0.0</version>
  <description>The abb_libegm package for easing the use of ABB Externally Guided Motion (EGM) product</description>

  <maintainer email="jon.tjerngren@se.abb.com">Jon Tjerngren</maintainer>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>

  <license>BSD 3-Clause</license>

  <author email="jon.tjerngren@se.abb.com">Jon Tjerngren</author>

  <url type="repository">https://github.com/tingelst/abb_libegm</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>

  <depend>protobuf-dev</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
