<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>controllers</name>
  <version>1.0.0</version>
  <description>controllers</description>

  <maintainer email="mariunil@stud.ntnu.no">Marius Nilsen</maintainer>
  <license>Apache License 2.0</license>
  <author email="markubjo@stud.ntnu.no">Markus Bjønnes</author>
  <author email="mariunil@stud.ntnu.no">Marius Nilsen</author>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Required by joint_position_controller -->
  <depend>ros2_control_utils</depend>
  <depend>ros2_control_interfaces</depend>

  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>controller_parameter_server</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>parameter_server_interfaces</build_depend>

  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_parameter_server</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>controller_parameter_server</test_depend>
  <test_depend>test_robot_hardware</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
